# atafuzzer

./: .clang-format  Doxyfile  README.md  configure.ac
src/: Makefile.am  main.c
src/lib/: Makefile.am  ata.h  ata_controller.c  ata_controller.h  ata_device.c  ata_device.h  ata_fuzzer.c  ata_fuzzer.h  bus_master.h  dma_buffer.c  dma_buffer.h
