noinst_LIBRARIES = libata_controller.a libata_device.a libata_fuzzer.a libdma_buffer.a libinput.a libpci_device.a
libata_controller_a_SOURCES = ata_controller.c
libata_device_a_SOURCES = ata_device.c
libata_fuzzer_a_SOURCES = ata_fuzzer.c
libdma_buffer_a_SOURCES = dma_buffer.c
libpci_device_a_SOURCES = pci_device.c
libinput_a_SOURCES = input.c
